--- a/MyGame/MyGame.csproj
+++ b/MyGame/MyGame.csproj
@@ -80,6 +80,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Audio\Sound.cs" />
+    <Compile Include="Components\Monsters\MonsterBase.cs" />
+    <Compile Include="Components\Players\Player.cs" />
+    <Compile Include="Components\Traps\TrapBase.cs" />
     <Compile Include="Controls\Control.cs" />
     <Compile Include="Controls\ControlManager.cs" />
     <Compile Include="Controls\Label.cs" />
@@ -103,7 +107,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Audio\" />
+    <Folder Include="Components\WorldMap\" />
     <Folder Include="Tools\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
