--- a/MyGame/MyGame.csproj
+++ b/MyGame/MyGame.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Components\Monsters\Monster.cs" />
     <Compile Include="Components\Players\Player.cs" />
     <Compile Include="Components\Traps\TrapBase.cs" />
+    <Compile Include="Components\WorldMap\TileMapManager.cs" />
     <Compile Include="Controls\Control.cs" />
     <Compile Include="Controls\ControlManager.cs" />
     <Compile Include="Controls\Label.cs" />
@@ -102,15 +103,36 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sprites\AnimatedSprite.cs" />
     <Compile Include="Sprites\Animation.cs" />
+    <Compile Include="TiledSharp\src\Group.cs" />
+    <Compile Include="TiledSharp\src\ImageLayer.cs" />
+    <Compile Include="TiledSharp\src\ITmxLayer.cs" />
+    <Compile Include="TiledSharp\src\Layer.cs" />
+    <Compile Include="TiledSharp\src\Map.cs" />
+    <Compile Include="TiledSharp\src\ObjectGroup.cs" />
+    <Compile Include="TiledSharp\src\TiledCore.cs" />
+    <Compile Include="TiledSharp\src\Tileset.cs" />
   </ItemGroup>
   <ItemGroup>
     <MonoGameContentReference Include="Content\Content.mgcb" />
+    <None Include="app.config" />
     <None Include="app.manifest" />
+    <None Include="mgfxc.deps.json" />
+    <None Include="mgfxc.runtimeconfig.dev.json" />
+    <None Include="mgfxc.runtimeconfig.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Components\WorldMap\" />
     <Folder Include="Tools\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="CppNet.dll" />
+    <Content Include="libmojoshader_64.dll" />
+    <Content Include="mgfxc.dll" />
+    <Content Include="mgfxc.exe" />
+    <Content Include="mgfxc.pdb" />
+    <Content Include="SharpDX.D3DCompiler.dll" />
+    <Content Include="SharpDX.D3DCompiler.xml" />
+    <Content Include="SharpDX.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MonoGame.Framework.WindowsDX.3.8.0.1641\build\MonoGame.Framework.WindowsDX.targets" Condition="Exists('..\packages\MonoGame.Framework.WindowsDX.3.8.0.1641\build\MonoGame.Framework.WindowsDX.targets')" />
